k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: basic-springboot-app
  labels:
    app: basic-springboot-app
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: basic-springboot-app
